서브메뉴 애니메이션 연습

--- a/level-1(again)/project1/main.css
+++ b/level-1(again)/project1/main.css
@@ -7,11 +7,13 @@
 }
 
 .list-group {
-  display: none;
+  height: 0px;
+  overflow: hidden;
+  transition: all 1s;
 }
 
 .show {
-  display: block;
+  height: 207px;
 }
 
 .black-bg {
