--- a/level-2/project/main.css
+++ b/level-2/project/main.css
@@ -52,4 +52,19 @@
 
 .alert {
   display: block;
+  margin: 0px;
+}
+
+.slide-container {
+  width: 300vw;
+  transition: all 1s;
+}
+
+.slide-box {
+  width: 100vw;
+  float: left;
+}
+
+.slide-box img {
+  width: 100%;
 }
